--- a/packages/design-docs/catalog/index.html
+++ b/packages/design-docs/catalog/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="stylesheet" type="text/css" href="Root.css">
+  <link rel="stylesheet" type="text/css" href="root.css">
   <title>ITP React Components</title>
 </head>
 <body>
